--- a/trunk/calendar_template.html
+++ b/trunk/calendar_template.html
@@ -517,10 +517,12 @@
   <!-- Footer Start -->
 </table>
 <table width=100% border=0><tr>
-<td style="font-size:85%;">[[Version]]</td>
-<td style="text-align:right">[[EventStyleBtn]] [[TemplateButton]] [[ConfigurationButton]]</td>
-</tr></table>
+<td style="font-size:85%;">[[TimeTrackValues]] [[Version]]</td>
+<td style="text-align:right; vertical-align:top;">[[EventStyleBtn]] [[TemplateButton]] [[ConfigurationButton]]</td>
+</tr>
+</table>
 [[TodayData]]
 </form>
+
 <!-- Footer End -->
 <!-- Calendar End -->
