--- a/trunk/calendar_template.html
+++ b/trunk/calendar_template.html
@@ -1,3 +1,22 @@
+<script type="text/javascript">
+function Verify(objForm) {
+	var arrExtensions=new Array("bmp", "gif", "jpg", "jpeg", "png");
+	var objInput = objForm.elements["myfile"];
+	var strFilePath = objInput.value;
+	var arrTmp = strFilePath.split(".");
+	var strExtension = arrTmp[arrTmp.length-1].toLowerCase();
+	var blnExists = false;
+	for (var i=0; i<arrExtensions.length; i++) {
+		if (strExtension == arrExtensions[i]) {
+			blnExists = true;
+			break;
+		}
+	}
+	if (!blnExists)
+		alert("not valid image!");
+	return blnExists;
+}
+</script>
 <!-- 
   Calendar Template
 	
@@ -256,6 +275,7 @@
 <table width=100% border=0><tr>
 <td style="font-size:85%;">[[Version]][[TimeTrackValues]]</td>
 <td style="text-align:right; vertical-align:top;">[[EventStyleBtn]] [[TemplateButton]] [[ConfigurationButton]]</td>
+<tr><td width=60%></td><td colspan="2" style="text-align:left; vertical-align:center;">[[Load_iCal]]</td></tr>
 </tr>
 </table>
 [[TodayData]]
