--- a/trunk/calendar_template.html
+++ b/trunk/calendar_template.html
@@ -45,7 +45,7 @@ function Verify(objForm) {
     <td class="calendarMonthSelect" colspan="2"> [[PreviousMonthButton]]&nbsp;[[MonthSelect]]&nbsp;[[NextMonthButton]] </td>
     <td class="calendarTitle" colspan="3"> [[CalendarName]]<br/>
       <font size="-1">[[CalendarMonth]], [[CalendarYear]]</font> </td>
-    <td class="calendarYearSelect" colspan="2">[[refresh_purge]] [[About]]&nbsp;[[TodayButton]]&nbsp;[[PreviousYearButton]]&nbsp;[[YearSelect]]&nbsp;[[NextYearButton]] </td>
+    <td class="calendarYearSelect" colspan="2">[[refresh_purge]]&nbsp;[[TodayButton]]&nbsp;[[PreviousYearButton]]&nbsp;[[YearSelect]]&nbsp;[[NextYearButton]] </td>
   </tr>
   <!-- Header End -->
   <!-- Day Heading Start -->
@@ -273,7 +273,7 @@ function Verify(objForm) {
   <!-- Footer Start -->
 </table>
 <table width=100% border=0><tr>
-<td style="font-size:85%;">[[Version]][[TimeTrackValues]]</td>
+<td style="font-size:85%;">[[Version]]&nbsp;[[About]][[TimeTrackValues]]</td>
 <td style="text-align:right; vertical-align:top;">[[EventStyleBtn]] [[TemplateButton]] [[ConfigurationButton]]</td>
 <tr><td width=60%></td><td colspan="2" style="text-align:left; vertical-align:center;">[[Load_iCal]]</td></tr>
 </tr>
