trunk: re-formatting repeating events

--- a/trunk/calendar_template.html
+++ b/trunk/calendar_template.html
@@ -50,7 +50,7 @@
 		  <td class="alerts">[[Alert]]</td>
         </tr>
         <tr>
-          <td class="calendarEventList" colspan="3">[[EventList]]</td>
+          <td colspan="3"><table class="calendarEventList">[[EventList]]</table></td>
         </tr>
       </table>
 	</td>
@@ -63,8 +63,7 @@
 		  <td class="alerts">[[Alert]]</td>
         </tr>
         <tr>
-          <td class="calendarEventList" colspan="3">[[EventList]]</td>
-        </tr>
+          <td colspan="3"><table class="calendarEventList">[[EventList]]</table></td></tr>
       </table>
 	</td>
 	<!-- Monday End -->
@@ -76,8 +75,7 @@
 		  <td class="alerts">[[Alert]]</td>
         </tr>
         <tr>
-          <td class="calendarEventList" colspan="3">[[EventList]]</td>
-        </tr>
+          <td colspan="3"><table class="calendarEventList">[[EventList]]</table></td>        </tr>
       </table>
 	</td>
 	<!-- Tuesday End -->
@@ -89,8 +87,7 @@
 		  <td class="alerts">[[Alert]]</td>
         </tr>
         <tr>
-          <td class="calendarEventList" colspan="3">[[EventList]]</td>
-        </tr>
+          <td colspan="3"><table class="calendarEventList">[[EventList]]</table></td>        </tr>
       </table>
 	</td>
 	<!-- Wednesday End -->
@@ -102,8 +99,7 @@
 		  <td class="alerts">[[Alert]]</td>
         </tr>
         <tr>
-          <td class="calendarEventList" colspan="3">[[EventList]]</td>
-        </tr>
+          <td colspan="3"><table class="calendarEventList">[[EventList]]</table></td>        </tr>
       </table>
 	</td>
 	<!-- Thursday End -->
@@ -115,8 +111,7 @@
 		  <td class="alerts">[[Alert]]</td>
         </tr>
         <tr>
-          <td class="calendarEventList" colspan="3">[[EventList]]</td>
-        </tr>
+          <td colspan="3"><table class="calendarEventList">[[EventList]]</table></td>        </tr>
       </table>
 	</td>
 	<!-- Friday End -->
@@ -128,8 +123,7 @@
 		  <td class="alerts">[[Alert]]</td>
         </tr>
         <tr>
-          <td class="calendarEventList" colspan="3">[[EventList]]</td>
-        </tr>
+          <td colspan="3"><table class="calendarEventList">[[EventList]]</table></td>        </tr>
       </table>
 	</td>
 	<!-- Saturday End -->
@@ -144,8 +138,7 @@
 		  <td class="alerts">[[Alert]]</td>
         </tr>
         <tr>
-          <td class="calendarEventList" colspan="3">[[EventList]]</td>
-        </tr>
+          <td colspan="3"><table class="calendarEventList">[[EventList]]</table></td>        </tr>
       </table>
 	</td>
 	<!-- Selected Sunday End -->
@@ -157,8 +150,7 @@
 		  <td class="alerts">[[Alert]]</td>
         </tr>
         <tr>
-          <td class="calendarEventList" colspan="3">[[EventList]]</td>
-        </tr>
+          <td colspan="3"><table class="calendarEventList">[[EventList]]</table></td>        </tr>
       </table>
 	</td>
 	<!-- Selected Monday End -->
@@ -170,8 +162,7 @@
 		  <td class="alerts">[[Alert]]</td>
         </tr>
         <tr>
-          <td class="calendarEventList" colspan="3">[[EventList]]</td>
-        </tr>
+          <td colspan="3"><table class="calendarEventList">[[EventList]]</table></td>        </tr>
       </table>
 	</td>
 	<!-- Selected Tuesday End -->
@@ -183,8 +174,7 @@
 		  <td class="alerts">[[Alert]]</td>
         </tr>
         <tr>
-          <td class="calendarEventList" colspan="3">[[EventList]]</td>
-        </tr>
+          <td colspan="3"><table class="calendarEventList">[[EventList]]</table></td>        </tr>
       </table>
 	</td>
 	<!-- Selected Wednesday End -->
@@ -196,8 +186,7 @@
 		  <td class="alerts">[[Alert]]</td>
         </tr>
         <tr>
-          <td class="calendarEventList" colspan="3">[[EventList]]</td>
-        </tr>
+          <td colspan="3"><table class="calendarEventList">[[EventList]]</table></td>        </tr>
       </table>
 	</td>
 	<!-- Selected Thursday End -->
@@ -209,8 +198,7 @@
 		  <td class="alerts">[[Alert]]</td>
         </tr>
         <tr>
-          <td class="calendarEventList" colspan="3">[[EventList]]</td>
-        </tr>
+          <td colspan="3"><table class="calendarEventList">[[EventList]]</table></td>        </tr>
       </table>
 	</td>
 	<!-- Selected Friday End -->
@@ -222,8 +210,7 @@
 		  <td class="alerts">[[Alert]]</td>
         </tr>
         <tr>
-          <td class="calendarEventList" colspan="3">[[EventList]]</td>
-        </tr>
+          <td colspan="3"><table class="calendarEventList">[[EventList]]</table></td>        </tr>
       </table>
 	</td>
 	<!-- Selected Saturday End -->
