--- a/trunk/calendar_template.html
+++ b/trunk/calendar_template.html
@@ -50,7 +50,7 @@
 		  <td class="alerts">[[Alert]]</td>
         </tr>
         <tr>
-          <td colspan="3"><table class="calendarEventList">[[EventList]]</table></td>
+          <td colspan="3"><table cellspacing=1 class="calendarEventList">[[EventList]]</table></td></tr>
         </tr>
       </table>
 	</td>
@@ -63,7 +63,7 @@
 		  <td class="alerts">[[Alert]]</td>
         </tr>
         <tr>
-          <td colspan="3"><table class="calendarEventList">[[EventList]]</table></td></tr>
+          <td colspan="3"><table cellspacing=1 class="calendarEventList">[[EventList]]</table></td></tr>
       </table>
 	</td>
 	<!-- Monday End -->
@@ -75,7 +75,7 @@
 		  <td class="alerts">[[Alert]]</td>
         </tr>
         <tr>
-          <td colspan="3"><table class="calendarEventList">[[EventList]]</table></td>        </tr>
+          <td colspan="3"><table cellspacing=1 class="calendarEventList">[[EventList]]</table></td></tr>
       </table>
 	</td>
 	<!-- Tuesday End -->
@@ -87,7 +87,7 @@
 		  <td class="alerts">[[Alert]]</td>
         </tr>
         <tr>
-          <td colspan="3"><table class="calendarEventList">[[EventList]]</table></td>        </tr>
+          <td colspan="3"><table cellspacing=1 class="calendarEventList">[[EventList]]</table></td></tr>
       </table>
 	</td>
 	<!-- Wednesday End -->
@@ -99,7 +99,7 @@
 		  <td class="alerts">[[Alert]]</td>
         </tr>
         <tr>
-          <td colspan="3"><table class="calendarEventList">[[EventList]]</table></td>        </tr>
+          <td colspan="3"><table cellspacing=1 class="calendarEventList">[[EventList]]</table></td></tr>
       </table>
 	</td>
 	<!-- Thursday End -->
@@ -111,7 +111,7 @@
 		  <td class="alerts">[[Alert]]</td>
         </tr>
         <tr>
-          <td colspan="3"><table class="calendarEventList">[[EventList]]</table></td>        </tr>
+          <td colspan="3"><table cellspacing=1 class="calendarEventList">[[EventList]]</table></td></tr>
       </table>
 	</td>
 	<!-- Friday End -->
@@ -123,7 +123,7 @@
 		  <td class="alerts">[[Alert]]</td>
         </tr>
         <tr>
-          <td colspan="3"><table class="calendarEventList">[[EventList]]</table></td>        </tr>
+          <td colspan="3"><table cellspacing=1 class="calendarEventList">[[EventList]]</table></td></tr>
       </table>
 	</td>
 	<!-- Saturday End -->
@@ -138,7 +138,7 @@
 		  <td class="alerts">[[Alert]]</td>
         </tr>
         <tr>
-          <td colspan="3"><table class="calendarEventList">[[EventList]]</table></td>        </tr>
+          <td colspan="3"><table cellspacing=1 class="calendarEventList">[[EventList]]</table></td></tr>
       </table>
 	</td>
 	<!-- Selected Sunday End -->
@@ -150,7 +150,7 @@
 		  <td class="alerts">[[Alert]]</td>
         </tr>
         <tr>
-          <td colspan="3"><table class="calendarEventList">[[EventList]]</table></td>        </tr>
+          <td colspan="3"><table cellspacing=1 class="calendarEventList">[[EventList]]</table></td></tr>
       </table>
 	</td>
 	<!-- Selected Monday End -->
@@ -162,7 +162,7 @@
 		  <td class="alerts">[[Alert]]</td>
         </tr>
         <tr>
-          <td colspan="3"><table class="calendarEventList">[[EventList]]</table></td>        </tr>
+          <td colspan="3"><table cellspacing=1 class="calendarEventList">[[EventList]]</table></td></tr>
       </table>
 	</td>
 	<!-- Selected Tuesday End -->
@@ -174,7 +174,7 @@
 		  <td class="alerts">[[Alert]]</td>
         </tr>
         <tr>
-          <td colspan="3"><table class="calendarEventList">[[EventList]]</table></td>        </tr>
+          <td colspan="3"><table cellspacing=1 class="calendarEventList">[[EventList]]</table></td></tr>
       </table>
 	</td>
 	<!-- Selected Wednesday End -->
@@ -186,7 +186,7 @@
 		  <td class="alerts">[[Alert]]</td>
         </tr>
         <tr>
-          <td colspan="3"><table class="calendarEventList">[[EventList]]</table></td>        </tr>
+          <td colspan="3"><table cellspacing=1 class="calendarEventList">[[EventList]]</table></td></tr>
       </table>
 	</td>
 	<!-- Selected Thursday End -->
@@ -198,19 +198,19 @@
 		  <td class="alerts">[[Alert]]</td>
         </tr>
         <tr>
-          <td colspan="3"><table class="calendarEventList">[[EventList]]</table></td>        </tr>
+          <td colspan="3"><table cellspacing=1 class="calendarEventList">[[EventList]]</table></td></tr>
       </table>
 	</td>
 	<!-- Selected Friday End -->
 	<!-- Selected Saturday Start -->
-    <td class="calendarSaturday calendarToday"><table class="calendarTransparent">
+    <td class="calendarWeekday calendarToday"><table class="calendarTransparent">
         <tr>
           <td class="calendarDayNumber">[[Day]]</td>
           <td class="calendarEventAdd">[[AddEvent]]</td>
 		  <td class="alerts">[[Alert]]</td>
         </tr>
         <tr>
-          <td colspan="3"><table class="calendarEventList">[[EventList]]</table></td>        </tr>
+          <td colspan="3"><table cellspacing=1 class="calendarEventList">[[EventList]]</table></td></tr>
       </table>
 	</td>
 	<!-- Selected Saturday End -->
